code and action redesign

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,7 +4,9 @@
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "assets"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -29,7 +31,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
